--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*/cache/*.lua
+*/cache/*.py
 *.js.map
 /test
 package-lock.json
@@ -9,7 +11,6 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
