--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "create-require": "^1.1.1",
     "diff": "^4.0.2",
     "make-error": "^1.3.6",
+    "mysql2": "^2.3.3",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3",
