--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "removeComments": true,
     "preserveConstEnums": true
   },
-  "include": ["src/*", "test/*"],
+  "include": ["src/*.ts", "test/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
